--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -97,6 +97,7 @@ nav:
                             - Lakeshore: config_lakeshore.md
                             - Linkam: config_linkam.md
                             - Eurotherm Nanodac: config_nanodac.md
+                            - Eurotherm2000: config_eurotherm2000.md
                             - Oxford700: config_oxford700.md
                             - Oxford800: config_oxford800.md
                             - PACE: config_pace.md
@@ -110,9 +111,7 @@ nav:
                       - Tango attribute as counters: config_taac.md
                       - Tango gauges: config_tg_gauges.md
                       - Temperature framework:
-                            - Eurotherm2000: config_eurotherm.md
                             - Meerstetter: config_meerstetter.md
-                            - PACE: config_pace.md
                       - TFG: config_tango_tfg.md
                       - Transfocators: config_transfocator.md
                       - Transmission: config_transmission.md
