--- a/tests/test_configuration/regulation/eurotherm2000.yml
+++ b/tests/test_configuration/regulation/eurotherm2000.yml
@@ -1,6 +1,5 @@
 class: Eurotherm2000
-plugin: regulation
-module: temperature.eurotherm.eurotherm2000
+module: regulation.temperature.eurotherm.eurotherm2000
 serial:
     #url: /dev/ttyS0
     url: tango://id00/tango/dummy
