diffractometer as BlissController

--- a/tests/test_configuration/diffracto.yml
+++ b/tests/test_configuration/diffracto.yml
@@ -1,10 +1,11 @@
--
-  controller:
-    plugin: diffractometer
-    name: d4ch
+diffractometers:
+  - name: d4ch
+    plugin: bliss_controller
+    module: diffractometers.diff_fourc
+    class: DiffE4CH
     geometry: E4CH
-    axes:
     
+    axes:
       - name: $roby
         tags: real omega
       - name: $robu
@@ -13,7 +14,6 @@
         tags: real phi
       - name: $robz2
         tags: real tth
-
       - name: $mono
         tags: real energy
 
@@ -25,14 +25,15 @@
         tags: hkl_l
       - name: Q
         tags: q_q
-
--
-  controller:
-    plugin: diffractometer
-    name: zaxis 
-    geometry: ZAXIS
-    axes:
     
+
+  - name: zaxis 
+    plugin: bliss_controller
+    module: diffractometers.diff_zaxis
+    class: DiffZAXIS
+    geometry: ZAXIS
+
+    axes:
       - name: $roby
         tags: real mu
       - name: $robu
