--- a/requirements-doc-conda.txt
+++ b/requirements-doc-conda.txt
@@ -1,6 +1,6 @@
 # Conda requirement file 
 # Documentation requirements
-sphinx
+sphinx!=4.0.0  # See https://gitlab.esrf.fr/bliss/bliss/-/issues/2749
 graphviz
 pygments
 markdown-inline-graphviz
