--- a/demo/demo_configuration/tango/lima_simulator.yml
+++ b/demo/demo_configuration/tango/lima_simulator.yml
@@ -43,5 +43,7 @@ device:
   tango_name: id00/mask/simulator1
 - class: Roi2spectrumDeviceServer
   tango_name: id00/roi2spectrum/simulator1
+- tango_name: id00/roicollection/simulator1
+  class: RoiCollectionDeviceServer
 personal_name: simulator
 server: LimaCCDs
