Three metadata protocols: HasMetadataForDataset, HasMetadataForScan and NonScannableHasMetadataForScan

--- a/demo/demo_configuration/misc.yml
+++ b/demo/demo_configuration/misc.yml
@@ -9,20 +9,31 @@ positions:
   - axis: $att1z
     destination: 0.5
     tolerance: 0.01
-  metadata:
+  scan_metadata:
     "@NX_class": NXattenuator
     type: Al
     status: in
-    
+  dataset_metadata:
+    type: Al
+    status: in
+    Positioners_name: $att1z.name
+    Positioners_value: $att1z.position
+
 - label: Al40
   description: Attenuator in Al40 position
   target:
   - axis: $att1z
     destination: 1.5
     tolerance: 0.01
-  metadata:
+  scan_metadata:
     "@NX_class": NXattenuator
     type: Al
     thickness: 40
     thickness@unit: um
     status: in
+  dataset_metadata:
+    type: Al
+    thickness: 40
+    status: in
+    Positioners_name: $att1z.name
+    Positioners_value: $att1z.position
