--- a/demo/demo_configuration/regulation.yml
+++ b/demo/demo_configuration/regulation.yml
@@ -4,33 +4,30 @@
     plugin: regulation
     inputs:
         -
-            name: thermo_sample_new
+            name: sample_temp
             channel: A
             unit: deg
             cooling_rate: 1.0
-            tango_server: temp1
         -
-            name: sensor_new
+            name: tank_temp
             channel: B
             cooling_rate: 2.0
-            tango_server: temp1
 
     outputs:
         -
-            name: heater_new
+            name: heater
             channel: A 
             unit: Volt
             low_limit:  0.0
             high_limit: 100.0
             ramprate: 0.0
             heating_rate: 10.0
-            tango_server: temp1
 
     ctrl_loops:
         -
             name: regulation
-            input: $thermo_sample_new
-            output: $heater_new
+            input: $sample_temp
+            output: $heater
             P: 0.5
             I: 0.2
             D: 0.0
@@ -41,4 +38,3 @@
             deadband_time: 1.5
             ramprate: 1.0
             wait_mode: deadband
-            tango_server: temp1
