--- a/tests/test_configuration/dummy.yml
+++ b/tests/test_configuration/dummy.yml
@@ -7,7 +7,7 @@
     - name: dummy2
       t_value: bla
 
-- plugin: bliss_controller #emotion
+- plugin: emotion
   class: DummyCtrl
   package: test_initialization
   axes:
