--- a/doc/mkdocs.yml
+++ b/doc/mkdocs.yml
@@ -1,5 +1,6 @@
 site_name: Bliss documentation
 repo_name: 'bliss/bliss'
+site_url: ''
 repo_url: 'https://gitlab.esrf.fr/bliss/bliss'
 use_directory_urls: false
 nav:
